--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PDSProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="529" Width="349">
+        Title="MainWindow" Height="529" Width="349" Closing="MainWindow_Closing">
     <Grid Margin="0,0,2,0" Height="357" VerticalAlignment="Top">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
