--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -3,6 +3,96 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable="d"
+        Title="Condividi" Height="600" Width="430"
+        WindowStartupLocation="CenterOwner"
+        Closing="MainWindow_Closing">
+    <StackPanel Background="#BDD6E6" Margin="0,0,0,0.4">
+
+        <Grid Height="570">
+
+            <!--Main Window-->
+            <Canvas x:Name="MainCanvas" Background="AliceBlue" Margin="10,10,10,16" RenderTransformOrigin="0.516,0.543">
+
+                <!--Local User-->
+                <Ellipse x:Name="ImageProfile" Stroke="DodgerBlue" RenderTransformOrigin="-0.038,-1.145" Height="121" Width="116" Canvas.Left="18" Canvas.Top="18">
+                    <!--<Ellipse.Fill>
+                        <ImageBrush />/ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
+                    </Ellipse.Fill>-->
+                </Ellipse>
+                <TextBlock x:Name="textUserName" FontWeight="Bold" TextWrapping="Wrap" Text="Rossella" RenderTransformOrigin="0.458,0.489" Canvas.Left="158" Canvas.Top="49" Width="57"/>
+                <ComboBox x:Name="comboStatus" SelectionChanged="ComboStatus_OnSelectionChanged" SelectedIndex="1" RenderTransformOrigin="-0.357,-5.009" Canvas.Left="158" Canvas.Top="76" Width="100">
+                    <ComboBoxItem>Public</ComboBoxItem>
+                    <ComboBoxItem>Private</ComboBoxItem>
+                </ComboBox>
+
+                <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources/Host/HostProfileImage/settings.png" RenderTransformOrigin="0.48,0.47" Height="38" Width="46" Canvas.Left="348" Canvas.Top="10"/>
+
+                <!--Progress File-->
+                <TextBlock x:Name="textFile" Visibility="Hidden" TextWrapping="Wrap" Text="prova.pdf" RenderTransformOrigin="0.488,0.535" Canvas.Left="24" Canvas.Top="164"/>
+                <TextBlock x:Name="textNumberFile" Visibility="Hidden" TextWrapping="Wrap" Text="(1/1)" RenderTransformOrigin="0.566,0.535" Canvas.Left="225" Canvas.Top="164"/>
+                <TextBlock x:Name="textTime" Visibility="Hidden" TextWrapping="Wrap" Text="05:00" RenderTransformOrigin="0.51,0.568" Canvas.Left="152" Canvas.Top="164"/>
+                <ProgressBar x:Name="progressFile" Visibility="Hidden" Height="18" Width="226" Canvas.Left="24" Canvas.Top="190"/>
+                <Button x:Name="stopButton" Visibility="Hidden" Content="X" Canvas.Left="272" Canvas.Top="190" Width="24" Height="18"/>
+
+
+                <!--Friends-->
+                <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Canvas.Left="24" Canvas.Top="235" Width="47"/>
+                <Canvas x:Name="canvasSelect" Background="AliceBlue" Height="86" Canvas.Top="256" Canvas.Left="18" Width="368"/>
+                <Ellipse x:Name="imageFriend" MouseDown="Canvas_Visible" Stroke="DodgerBlue" RenderTransformOrigin="-0.038,-1.145" Height="65" Width="71" Canvas.Left="31" Canvas.Top="268">
+                    <!--<Ellipse.Fill>
+                        <ImageBrush ImageSource="Resources/Host/HostProfileImage/pikachu.png" />
+                    </Ellipse.Fill>-->
+                </Ellipse>
+                <TextBlock x:Name="textNFriend" Margin="0 0 0 0" TextWrapping="Wrap" RenderTransformOrigin="0.495,0.479" Height="22" Canvas.Left="119" Canvas.Top="282" Width="170"/>
+                <TextBlock x:Name="textSFriend" Foreground="Green" TextWrapping="Wrap" RenderTransformOrigin="0.501,0.503" Height="22" Canvas.Left="119" Canvas.Top="304" Width="170"/>
+
+                <TextBox x:Name="textInfoMessage" Height="86" Canvas.Left="24" TextWrapping="Wrap" Text="NO MESSAGE YET..." Canvas.Top="380" Width="355" />
+
+
+                <Button x:Name="SendButton" Visibility="Hidden" Content="Invia" Height="22" Width="64" Canvas.Left="322" Canvas.Top="512"/>
+                <Button x:Name="UndoButton" Visibility="Hidden" Content="Annulla" Height="22" Width="64" Canvas.Left="243" Canvas.Top="512"/>
+
+            </Canvas>
+
+
+            <!--Settings-->
+            <Canvas x:Name="SettingsCanvas" Visibility="Hidden"  Background="AliceBlue" Margin="10,10,10,16" RenderTransformOrigin="0.516,0.543">
+
+                <!--User Settings-->
+                <Ellipse x:Name="ImageSettingsProfile" Stroke="DodgerBlue" RenderTransformOrigin="-0.038,-1.145" Height="121" Width="116" Canvas.Left="18" Canvas.Top="18">
+                    <Ellipse.Fill>
+                        <ImageBrush ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
+                    </Ellipse.Fill>
+                </Ellipse>
+                <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Nome Profilo" RenderTransformOrigin="0.458,0.489" Canvas.Left="174" Canvas.Top="50" Width="99" Height="19"/>
+                <TextBox x:Name="textChangeName" Height="26" Canvas.Left="174" TextWrapping="Wrap" Text="Rossella" Canvas.Top="74" Width="190"/>
+                <Image x:Name="editIcon" Source="Resources/Host/HostProfileImage/edit.png" RenderTransformOrigin="3.019,6.691" MouseDown="Image_MouseDown" Height="22" Width="25" Canvas.Left="119" Canvas.Top="117"/>
+
+
+                <!--System Settings-->
+                <CheckBox x:Name="AcceptFile" Content="Accetta tutti i file" Canvas.Left="33" Canvas.Top="194" Height="24" Width="274"/>
+                <CheckBox x:Name="ChoosePath" Checked="CheckBox_Check" Unchecked="CheckBox_Uncheck" Content="Usa percorso predefinito" Canvas.Left="33" Canvas.Top="223" Height="24" Width="274"/>
+                <TextBlock FontWeight="Bold" TextWrapping="Wrap" Text="Path" RenderTransformOrigin="0.458,0.489" Canvas.Left="33" Canvas.Top="262" Width="99" Height="19"/>
+                <TextBox x:Name="pathName" Height="26" Canvas.Left="33" IsReadOnly="True" Background="LightGray" TextWrapping="Wrap" Canvas.Top="286" Width="341"/>
+                <Button x:Name="folderButton" Click="FolderButton_OnClick" Visibility="Hidden" Content="Cambia" Height="22" Width="64" Canvas.Left="310" Canvas.Top="326"/>
+
+
+                <Button x:Name="ApplyButton" Click="ApplyButton_OnClick" Content="Applica" Height="22" Width="64" Canvas.Left="322" Canvas.Top="512"/>
+                <Button x:Name="BackButton" Click="BackButton_OnClick" Content="Indietro" Height="22" Width="64" Canvas.Left="243" Canvas.Top="512"/>
+
+            </Canvas>
+
+        </Grid>
+    </StackPanel>
+
+</Window>
+
+<!--<Window x:Class="PDSProject.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PDSProject"
         mc:Ignorable="d"
         Title="MainWindow" Height="529" Width="349">
@@ -16,7 +106,7 @@
             <TextBlock x:Name="textStatus" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" FontWeight="Bold" Width="45"><Run Text="Status"/><Run Text=":"/></TextBlock>
             <TextBlock x:Name="textNToInsert" Canvas.Left="60" TextWrapping="Wrap" Canvas.Top="10" Width="160"/>
             <TextBlock x:Name="textSToInsert" Canvas.Left="60" TextWrapping="Wrap" Canvas.Top="32" Width="160"/>
-            <Image x:Name="HostImage" Height="50" Canvas.Left="240" Stretch="Fill" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Top="6" Source="Resources/defaultProfile.png"/>
+            <Image x:Name="HostImage" Height="50" Canvas.Left="240" Stretch="Fill" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Top="6" Source="Resources/Host/HostProfileImage/defaultProfile.png"/>
         </Canvas>
         <Canvas x:Name="Body" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="253" Margin="20,189,0,-85" VerticalAlignment="Top" Width="300">
             <TextBox x:Name="WriteMessage" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" Text="Insert message to send..." VerticalAlignment="Top" Width="300"/>
@@ -38,4 +128,4 @@
         <TextBlock x:Name="HostSelected" TextWrapping="Wrap" FontWeight="Bold" Grid.ColumnSpan="2" Margin="10,99,19,242" RenderTransformOrigin="1,7.625" Text="Host info"/>
 
     </Grid>
-</Window>
+</Window>-->
