--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -15,7 +15,7 @@
             <Canvas x:Name="MainCanvas" Background="AliceBlue" Margin="10,10,10,16" RenderTransformOrigin="0.516,0.543">
 
                 <!--Local User-->
-                <Ellipse x:Name="ImageProfile" Stroke="DodgerBlue" RenderTransformOrigin="-0.038,-1.145" Height="121" Width="116" Canvas.Left="18" Canvas.Top="18">
+                <Ellipse x:Name="ImageProfile" Stroke="Orange" RenderTransformOrigin="-0.038,-1.145" Height="121" Width="116" Canvas.Left="18" Canvas.Top="18">
                     <!--<Ellipse.Fill>
                         <ImageBrush />/ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
                     </Ellipse.Fill>-->
@@ -39,7 +39,7 @@
                 <!--Friends-->
                 <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Canvas.Left="24" Canvas.Top="235" Width="47"/>
                 <Canvas x:Name="canvasSelect" Background="AliceBlue" Height="86" Canvas.Top="256" Canvas.Left="18" Width="368"/>
-                <Ellipse x:Name="imageFriend" MouseDown="Canvas_Visible" Stroke="DodgerBlue" RenderTransformOrigin="-0.038,-1.145" Height="74" Width="71" Canvas.Left="31" Canvas.Top="268">
+                <Ellipse x:Name="imageFriend" MouseDown="Canvas_Visible" Stroke="Orange" RenderTransformOrigin="-0.038,-1.145" Height="74" Width="71" Canvas.Left="31" Canvas.Top="268">
                     <!--<Ellipse.Fill>
                         <ImageBrush ImageSource="Resources/Host/HostProfileImage/pikachu.png" />
                     </Ellipse.Fill>-->
