--- a/PDSProject/MainWindow.xaml
+++ b/PDSProject/MainWindow.xaml
@@ -4,18 +4,20 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Condividi" Height="707.6" Width="550.6"
-        Background="#BDD6E6"
+        Title="Condividi" Height="710" Width="560"
         Closing="MainWindow_Closing">
+    <Window.Background>
+        <ImageBrush ImageSource="Resources/System/sfondo.png" Stretch="UniformToFill"/>
+    </Window.Background>
     <!--<StackPanel Background="#BDD6E6" Margin="0,0,0.4,-3.2" Orientation="Vertical">-->
 
     <Grid Margin="10,10,10,10" IsSharedSizeScope="True">
 
         <!--Main Window-->
         <!--Local User-->
-        <GroupBox x:Name="MainCanvas" Header="Condividi" Background="AliceBlue">
+        <GroupBox x:Name="MainCanvas" Header="Condividi" BorderBrush="Black" Foreground="Black">
             <Grid>
-                <Ellipse x:Name="ImageProfile" Stroke="White" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <Ellipse x:Name="ImageProfile" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Stroke="White">
                     <!--<Ellipse.Fill>
                    <ImageBrush />/ImageSource="Resources/Host/HostProfileImage/fox.jpg" />
                 </Ellipse.Fill>-->
@@ -27,40 +29,40 @@
                     <ComboBoxItem>Offline</ComboBoxItem>
                 </ComboBox>
 
-                <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources\System\settings.png" VerticalAlignment="Top" Height="25" Margin="0,0,0.2,0" HorizontalAlignment="Right" Width="30"/>
+                <Image x:Name="settingsIcon" MouseDown="Settings_visible" Source="Resources/System/settings.png" VerticalAlignment="Top" Height="36" Margin="0,10,9.8,0" HorizontalAlignment="Right" Width="36"/>
 
                 <!--Progress File-->
-                <TextBlock x:Name="textFile" TextWrapping="Wrap" Text="prova.pdf" RenderTransformOrigin="0.488,0.535" Margin="22,181,276.4,0" Height="29" VerticalAlignment="Top"/>
-                <TextBlock x:Name="textNumberFile" TextWrapping="Wrap" Text="(1/1)" RenderTransformOrigin="0.566,0.535" Height="18" VerticalAlignment="Top" Margin="244,181,179.4,0"/>
-                <TextBlock x:Name="textTime" TextWrapping="Wrap" Text="05:00" RenderTransformOrigin="0.51,0.568" Height="29" VerticalAlignment="Top" Margin="319,181,88.4,0"/>
+                <TextBlock x:Name="textFile" TextWrapping="Wrap" RenderTransformOrigin="0.488,0.535" Margin="22,181,228.8,0" Height="29" VerticalAlignment="Top"/>
+                <TextBlock x:Name="textNumberFile" TextWrapping="Wrap" Text="(1/1)" RenderTransformOrigin="0.566,0.535" Height="29" VerticalAlignment="Top" Margin="297,181,125.8,0"/>
+                <TextBlock x:Name="textTime" TextWrapping="Wrap" RenderTransformOrigin="0.51,0.568" Height="29" VerticalAlignment="Top" Margin="373,181,70.8,0"/>
                 <ProgressBar x:Name="progressFile" Height="18" Margin="22,215,250.4,0" VerticalAlignment="Top"/>
                 <Button x:Name="stopButton" Content="X" Height="18" Margin="0,215,199.4,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="24"/>
 
                 <!--Friends-->
                 <TextBlock x:Name="textFriend" FontWeight="Bold" TextWrapping="Wrap" Text="Amici" RenderTransformOrigin="0.479,0.472" Margin="22,314,403.2,298.2"/>
 
-                <ListBox Name="lbTodoList" SelectionChanged="LbTodoList_OnSelectionChanged" Background="AliceBlue" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="22,337,20.2,42.2">
+                <ListBox Name="friendList" SelectionChanged="friendList_OnSelectionChanged" HorizontalContentAlignment="Stretch" SelectionMode="Extended" Margin="22,337,20.2,42.2" Width="470" Background="Transparent">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <Grid Margin="0,2">
+                            <Grid Margin="0,0">
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />
-                                    <ColumnDefinition Width="*" />
+                                    <ColumnDefinition Width="100" />
+                                    <ColumnDefinition Width="150" />
+                                    <ColumnDefinition Width="50" />
                                 </Grid.ColumnDefinitions>
-                                <Ellipse x:Name="imageFriend" Stroke="White" Height="78" Width="83">
+                                <Ellipse x:Name="imageFriend" Stroke="White" Height="78" Width="83" HorizontalAlignment="Center" VerticalAlignment="Center">
                                     <Ellipse.Fill>
                                         <ImageBrush ImageSource="{Binding ProfileImagePath}" />
                                     </Ellipse.Fill>
                                 </Ellipse>
-                                <TextBlock Text="{Binding Name}" Grid.Column="1" />
-                                <TextBlock Text="{Binding Status}" Grid.Column="2" />
+                                <TextBlock Text="{Binding Name}" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Center" FontWeight="Bold" />
+                                <TextBlock Text="{Binding Status}" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Left" />
                             </Grid>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
 
-                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,253,136.2,0" Height="48" VerticalAlignment="Top" />
+                <TextBox x:Name="textInfoMessage" TextWrapping="Wrap" Margin="22,253,24.8,0" Height="48" VerticalAlignment="Top" />
 
                 <Button x:Name="SendButton" Click="ButtonSend_Click" Content="Invia" Height="22" Width="64" Margin="0,0,10.4,9.8" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
                 <Button x:Name="UndoButton" Visibility="Hidden" Content="Annulla" Height="22" Width="64"/>
@@ -68,7 +70,7 @@
         </GroupBox>
 
         <!--Settings-->
-        <GroupBox x:Name="SettingsCanvas" Header="Impostazioni" Background="AliceBlue" Visibility="Hidden">
+        <GroupBox x:Name="SettingsCanvas" Visibility="Hidden" Header="Impostazioni" BorderBrush="Black" Foreground="Black">
             <Grid Margin="0,0,-2.4,-6.6">
                 <!--User Settings-->
                 <Ellipse x:Name="ImageSettingsProfile" Stroke="White" RenderTransformOrigin="-0.038,-1.145" Height="138" Width="135" Margin="22,23,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
@@ -88,54 +90,10 @@
                 <Button x:Name="folderButton" Visibility="Hidden" Click="FolderButton_OnClick" Content="Cambia" Width="64" Margin="0,351,66,0" HorizontalAlignment="Right" Height="22" VerticalAlignment="Top"/>
 
 
-                <Button x:Name="ApplyButton" Click="ApplyButton_OnClick" Content="Applica" Height="22" Width="64" Margin="0,0,10,10" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
-                <Button x:Name="BackButton" Click="BackButton_OnClick" Content="Indietro" Height="22" Width="64" Margin="0,0,93,10" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+                <Button x:Name="ApplyButton" Click="ApplyButton_OnClick" Content="Applica" Height="22" Width="64" Margin="0,0,13.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
+                <Button x:Name="BackButton" Click="BackButton_OnClick" Content="Indietro" Height="22" Width="64" Margin="0,0,93.2,18" HorizontalAlignment="Right" VerticalAlignment="Bottom"/>
 
             </Grid>
         </GroupBox>
     </Grid>
 </Window>
-
-
-
-<!--<Window x:Class="PDSProject.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PDSProject"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="529" Width="349">
-    <Grid Margin="0,0,2,0" Height="357" VerticalAlignment="Top">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Canvas x:Name="HostInfo" HorizontalAlignment="Left" Margin="20,115,0,182" Width="300" Background="#FFFFA4A4" Grid.ColumnSpan="2" MouseUp="HostInfo_MouseUp">
-            <TextBlock x:Name="textName" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="10" FontWeight="Bold" Width="45"><Run Text="Name"/><Run Text=":"/></TextBlock>
-            <TextBlock x:Name="textStatus" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="31" FontWeight="Bold" Width="45"><Run Text="Status"/><Run Text=":"/></TextBlock>
-            <TextBlock x:Name="textNToInsert" Canvas.Left="60" TextWrapping="Wrap" Canvas.Top="10" Width="160"/>
-            <TextBlock x:Name="textSToInsert" Canvas.Left="60" TextWrapping="Wrap" Canvas.Top="32" Width="160"/>
-            <Image x:Name="HostImage" Height="50" Canvas.Left="240" Stretch="Fill" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Top="6" Source="Resources/Host/HostProfileImage/defaultProfile.png"/>
-        </Canvas>
-        <Canvas x:Name="Body" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="253" Margin="20,189,0,-85" VerticalAlignment="Top" Width="300">
-            <TextBox x:Name="WriteMessage" HorizontalAlignment="Left" Height="48" TextWrapping="Wrap" Text="Insert message to send..." VerticalAlignment="Top" Width="300"/>
-            <Button x:Name="ButtonSend" Content="Send Message" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Click="ButtonSend_Click" Canvas.Left="95" Canvas.Top="59"/>
-            <TextBlock x:Name="textWaiting" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Canvas.Top="88"><Run Text="Wait for connection"/><Run Text="..."/></TextBlock>
-            <TextBlock x:Name="textConnection" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="70" Canvas.Top="109" Text="Connection:" FontWeight="Bold"/>
-            <TextBox x:Name="textCheckConnection" Height="23" Canvas.Left="85" TextWrapping="Wrap" Text="NOT CONNECTED" Canvas.Top="108" Width="195"/>
-            <TextBlock x:Name="textMessageReceived" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="110" Canvas.Top="136" Text="Message Received" FontWeight="Bold" Canvas.Left="87"/>
-            <TextBox x:Name="textInfoMessage" Height="86" Canvas.Left="10" TextWrapping="Wrap" Text="NO MESSAGE YET..." Canvas.Top="157" Width="280" />
-        </Canvas>
-        <Canvas x:Name="UserInfo" HorizontalAlignment="Left" Margin="20,30,0,267" Width="300" Background="#FFB6FF6C" Grid.ColumnSpan="2">
-            <TextBlock x:Name="textUName" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="10" FontWeight="Bold" Width="45"><Run Text="Name"/><Run Text=":"/></TextBlock>
-            <TextBlock x:Name="textUStatus" Canvas.Left="10" TextWrapping="Wrap" Canvas.Top="34" FontWeight="Bold" Width="45" RenderTransformOrigin="0.444,1.625"><Run Text="Status"/><Run Text=":"/></TextBlock>
-            <CheckBox x:Name="checkUSBox" Content="Offline&#xD;&#xA;" Canvas.Left="55" Canvas.Top="36" RenderTransformOrigin="0.451,-0.733" Checked="CheckUSBox_Checked" Height="14"/>
-            <TextBox x:Name="textUNInfo" Height="21" Canvas.Left="55" TextWrapping="Wrap" Canvas.Top="10" Width="166" TextChanged="TextUNInfo_TextChanged"/>
-            <Image x:Name="ImageProfile" Height="50" Canvas.Left="239" Source=".\Resources\defaultProfile.png" Stretch="Fill" Width="50" Canvas.Top="5" MouseDown="Image_MouseDown"/>
-        </Canvas>
-        <TextBlock x:Name="textName_Copy" TextWrapping="Wrap" FontWeight="Bold" Grid.ColumnSpan="2" Margin="10,10,10,331" RenderTransformOrigin="1,7.625"><Run Text="Local user info"/><LineBreak/><Run/></TextBlock>
-        <TextBlock x:Name="HostSelected" TextWrapping="Wrap" FontWeight="Bold" Grid.ColumnSpan="2" Margin="10,99,19,242" RenderTransformOrigin="1,7.625" Text="Host info"/>
-
-    </Grid>
-</Window>-->
